--- a/Data/config_spacy.json
+++ b/Data/config_spacy.json
@@ -1,7 +1,7 @@
 {
   "pipeline": "spacy_sklearn",
-  "path" : "E:/chat_demo_updated/models/trained",
-  "data" : "E:/chat_demo_updated/Data/rasa_data.json",
+  "path" : "C:/Users/Tilliconveli6/Desktop/New folder/ChatBot_Updated/models/trained",
+  "data" : "C:/Users/Tilliconveli6/Desktop/New folder/ChatBot_Updated/Data/rasa_data.json",
   "fine_tune_spacy_ner": true
 }
 
