--- a/Data/config_spacy.json
+++ b/Data/config_spacy.json
@@ -1,7 +1,7 @@
 {
-  "pipeline": "spacy_sklearn",
-  "path" : "E:/chat_demo_updated/models/trained",
-  "data" : "E:/chat_demo_updated/Data/rasa_data.json",
+  "pipeline": ["nlp_spacy","tokenizer_whitespace", "tokenizer_spacy","ner_crf","ner_spacy","ner_synonyms","intent_featurizer_spacy","intent_featurizer_ngrams", "intent_classifier_sklearn"],
+  "path" : "E:/Sample/models/trained",
+  "data" : "E:/Sample/Data/final_data.json",
   "fine_tune_spacy_ner": true
 }
 
